# Ising_VMC

./: Cargo.toml  README.md  helloWorld.txt  plot_results.py  run_experiments.py
results/: ed_benchmark.csv  energy_N10_h0.5_M10.csv  energy_N10_h1.0_M10.csv  energy_N10_h1.5_M10.csv  energy_N12_h0.5_M12.csv  energy_N12_h1.0_M12.csv  energy_N12_h1.0_M24.csv  energy_N12_h1.0_M6.csv  energy_N12_h1.5_M12.csv  energy_N14_h0.5_M14.csv  energy_N14_h1.0_M14.csv  energy_N14_h1.5_M14.csv  energy_N16_h0.5_M16.csv  energy_N16_h1.0_M16.csv  energy_N16_h1.5_M16.csv  energy_N8_h0.5_M8.csv  energy_N8_h1.0_M8.csv  energy_N8_h1.5_M8.csv  sweep_summary.csv  vmc_summary.csv
src/: ed.rs  main.rs  rbm.rs  sampler.rs  vmc.rs
src/myenv/: pyvenv.cfg
src/results/: energy_N8_h1.0_M8.csv
