[package]
name = "ising_vmc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.33"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
csv = "1"

[dev-dependencies]
approx = "0.5"


